src/objects/saTelemarketing__c.object
<CustomObject>
    <fields>
        <fullName>AffiliationCode__c</fullName>
        <label>加入者CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliationDate__c</fullName>
        <label>加入者生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppearanceCleanliness__c</fullName>
        <label>身だしなみの清潔感</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationNumber__c</fullName>
        <externalId>true</externalId>
        <label>申込番号</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BranchCode__c</fullName>
        <label>支店コード</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationBranchGroup__c</fullName>
        <label>拠点支店グループ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationBranch__c</fullName>
        <label>拠点支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationCode__c</fullName>
        <label>拠点CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationGroupName__c</fullName>
        <label>拠点グループ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationName__c</fullName>
        <label>拠点名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLocationResponsible__c</fullName>
        <label>拠点担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeExplanation__c</fullName>
        <label>使い方にあった料金の説明提案</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cordiality__c</fullName>
        <label>親身に聞いていたか</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceCompletionDate__c</fullName>
        <label>対応完了期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CorrespondenceDate__c</fullName>
        <label>初回架電対応期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistributionSeriesCode__c</fullName>
        <label>流通系列店コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionSeriesName__c</fullName>
        <label>流通系列店名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvolutionDate__c</fullName>
        <label>展開日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FamilyDiscountGroupCode__c</fullName>
        <label>家族割引グループコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <label>挨拶</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <label>グループコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformationExplanation__c</fullName>
        <label>知識理解度に応じた分かりやすい説明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementCorpCode__c</fullName>
        <label>出店者コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementCorpName__c</fullName>
        <label>運営法人名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementCorpRespBranch__c</fullName>
        <label>運営法人担当支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementCorpResponsible__c</fullName>
        <label>運営法人担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>オーダ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>オーダ種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherProblemInquiry__c</fullName>
        <label>他に何か相談,困りごとがないかお伺い</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgencyBranch__c</fullName>
        <label>代理店支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgencyCode__c</fullName>
        <label>代理店コード</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgencyName__c</fullName>
        <label>代理店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgencyResponsible__c</fullName>
        <label>代理店担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneServiceAdvice__c</fullName>
        <label>電話機サービスの便利な使い方アドバイス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_ShopRecommendationTime__c</fullName>
        <label>Q1店舗推奨度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_1_RecommendationReason__c</fullName>
        <label>Q2-1勧めたい理由</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_2_NoRecommendationReason__c</fullName>
        <label>Q2-2勧めたくない理由</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_StaffCorrespondence__c</fullName>
        <label>Q3スタッフの対応</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeCode__c</fullName>
        <label>支社コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeName__c</fullName>
        <label>支社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDate__c</fullName>
        <label>回答日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShopNoticeContent__c</fullName>
        <label>（ショップ）掲示内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopSanitaryPrecautions__c</fullName>
        <label>（ショップ）店内の清潔さ・整理整頓</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smiling__c</fullName>
        <label>笑顔</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare1__c</fullName>
        <label>予備1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare2__c</fullName>
        <label>予備2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare3__c</fullName>
        <label>予備3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeechAttitude__c</fullName>
        <label>言葉遣い・態度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaffName__c</fullName>
        <label>スタッフ氏名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <summarizedField>saTelemarketingReply__c.StatusInt__c</summarizedField>
        <summaryForeignKey>saTelemarketingReply__c.Parent__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UnifiedAgencyBranch__c</fullName>
        <label>統括代理店支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnifiedAgencyCode__c</fullName>
        <label>統括代理店コード</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnifiedAgencyName__c</fullName>
        <label>統括代理店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnifiedAgencyResponsible__c</fullName>
        <label>統括代理店担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoiceTiming__c</fullName>
        <label>お声がけ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitingTimeConsideration__c</fullName>
        <label>待ち時間気遣い</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaitingTimeInfo__c</fullName>
        <label>待ち時間案内</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>saTelemarketing</label>
    <nameField>
        <displayFormat>TLM-{00000000}</displayFormat>
        <label>saTelemarketing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>